--- a/settings/helpTemplates/style.css
+++ b/settings/helpTemplates/style.css
@@ -14,6 +14,11 @@ p, ul, ol, dl, dt, dd, td
 	font-size: 12pt;
 }
 
+p.version, p.see-also
+{
+	font-size: 6pt;
+}
+
 dt
 { 
 	padding-bottom: 6pt;
@@ -35,7 +40,7 @@ a:visited
 h1, h2, h3
 {
 	font-family: Corbel, Arial, Helvetica, Sans-Serif;
-	font-weight: lighter;
+	font-weight: bold;
 	text-align: left;
 	color: #bac8da;
 }
