--- a/settings/helpTemplates/style.css
+++ b/settings/helpTemplates/style.css
@@ -19,9 +19,26 @@ p.version, p.see-also
 	font-size: 8pt;
 }
 
-dt
-{ 
-	padding-bottom: 6pt;
+dl.enum
+{
+	margin: 0em 0;
+	padding: 0;
+}
+
+.enum dt
+{
+	position: relative;
+	left: 0;
+	top: 1.1em;
+	width: 5em;
+	font-weight: bold;
+}
+
+.enum dd
+{
+	border-left: 1px solid #000;
+	margin: 0 0 0 6em;
+	padding: 0 0 .5em .5em;
 }
 
 /*
