--- a/settings/helpTemplates/style.css
+++ b/settings/helpTemplates/style.css
@@ -74,29 +74,41 @@ h3
 	font-weight: normal;
 }
 
-#indexheader 
-{
-	position: absolute;
-	left: 50pt;
-	top: 100pt;
-	font-size: 38pt;
-}
-
-#indexbody
-{
-	position: absolute;
-	left: 50pt;
-	top: 180pt;
-}
-
-table#indextable tr td
+table.indextable tr td
 {
 	margin-right: 1em;
 }
 
-tr#indextableheader td
+/* 
+	Blue Dream
+	Written by Teylor Feliz  http://www.admixweb.com
+*/
+
+#hor-minimalist-b
 {
-	font-family: Corbel, Arial, Helvetica, Sans-Serif;
-	font-size: 14pt;
-	font-weight: lighter;
+	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+	font-size: 12px;
+	background: #fff;
+	margin: 5px;
+	width: 100%;
+	border-collapse: collapse;
+	text-align: left;
+}
+#hor-minimalist-b th
+{
+	font-size: 14px;
+	font-weight: normal;
+	color: #039;
+	padding: 10px 8px;
+	border-bottom: 2px solid #6678b1;
+}
+#hor-minimalist-b td
+{
+	border-bottom: 1px solid #ccc;
+	color: #669;
+	padding: 6px 8px;
+}
+#hor-minimalist-b tbody tr:hover td
+{
+	color: #009;
 }
