--- a/settings/helpTemplates/style.css
+++ b/settings/helpTemplates/style.css
@@ -95,6 +95,12 @@ dd {
     padding: 0 0 0.5em 0;
 }
 
+pre {
+    border: thin solid lightgray;
+    margin-left: 1em;
+    margin-right: 4em;
+    background-color: #e0fdff;
+}
 /*
  * clean table layouts
 */
@@ -128,6 +134,48 @@ dd {
 }
 
 th#row-divider 
+{
+    font-weight: bolder;
+	font-size: larger;
+}
+
+
+/*
+ *  Table design for input/ouptut description
+ */
+
+#description-table
+{
+	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+	font-size: 12px;
+	background: #fff;
+	margin: 5px;
+	border-collapse: collapse;
+	text-align: left;
+}
+#description-table th
+{
+	font-size: 16px;
+	font-weight: bold;
+    background-color: lightgray;
+	color: #039;
+    text-align: center;
+	padding: 10px 8px;
+	border-bottom: 2px solid #6678b1;
+}
+#description-table td
+{
+	border-bottom: 1px solid #ccc;
+	color: #669;
+	padding: 6px 8px;
+    text-align: right;
+}
+#description-table tbody tr:hover td
+{
+	color: #009;
+}
+
+th#row-divider
 {
     font-weight: bolder;
 	font-size: larger;
